Align hero and header correctly

--- a/style.css
+++ b/style.css
@@ -42,20 +42,16 @@ body {
 }
 
 
-.header {   
+.header, .hero {   
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
+    padding: 16px 128px;
 }
-
-
 
 .hero {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+    padding-bottom: 100px;
 }
-
 
 .main-text {
     margin-bottom: 0px;
